

- There will not be a 1.5.27 beta version -
We will not be releasing a 1.5.27 beta version and the next beta version will be numbered 1.5.28. Beta 1.5.27 was an internal test version in an effort on our part to improve the build and deploy process.


- Quest Draft Improvements -
Alongside bug fixes, quest drafts have been updated to be more valuable to your quest! Now, when you place first or second, you will get to pick a rare in the drafted block's pool to keep. This is in addition to the already existing prizes.
Additionally, when you spend draft tokens, you no longer receive a random draft. Instead, you get to pick which block the new draft will be (but you still have to pay for it!), completely eliminating the game of chance.

-------------------------------
New Commander 2014 branch Cards
-------------------------------

Ghoulcaller Gisa
Stitcher Geralf
Teferi, Temporal Archmage


--------------------------------
New Khans of Tarkir branch Cards
--------------------------------

Abzan Ascendancy
Abzan Banner
Abzan Battle Priest
Abzan Falconer
Abzan Guide
Ainok Bond-Kin
Alabaster Kirin
Anafenza, the Foremost
Ankle Shanker
Bear's Companion
Bloodfell Caves
Blossoming Sands
Brave the Sands
Clever Impersonator
Crater's Claws
Dazzling Ramparts
Defiant Strike
Disdainful Stroke
Dismal Backwater
Dragon's Eye Savants
Dragon-Style Twins
End Hostilities
Flying Crane Technique
Frontier Bivouac
Ghostfire Blade
Grim Haruspex
Hardened Scales
Heir of the Wilds
Herald of Anafenza
Horde Ambusher
Ivorytusk Fortress
Jeering Instigator
Jeskai Banner
Jeskai Elder
Jeskai Windscout
Jungle Hollow
Mantis Rider
Mardu Banner
Mardu Skullhunter
Master of Pearls
Murderous Cut
Mystic Monastery
Nomad Outpost
Opulent Palace
Pearl Lake Ancient
Rakshasa Deathdealer
Rattleclaw Mystic
Rugged Highlands
Ruthless Ripper
Sagu Mauler
Sandsteppe Citadel
Sarkhan, the Dragonspeaker
Savage Knuckleblade
Scoured Barrens
See the Unwritten
Shambling Attendants
Sidisi's Pet
Siege Rhino
Sorin, Solemn Visitor